# Nulmesis

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  GEMINI.md  Nulmesis.slnx  README.md  README.zh-CN.md  commitlint.config.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: i18n.ts  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/nulmesis-cli/: Cargo.toml
crates/nulmesis-cli/src/: lib.rs  main.rs
crates/nulmesis-core/: Cargo.toml
crates/nulmesis-core/src/: deleter.rs  fixtures.rs  lib.rs  match_policy.rs  models.rs  path.rs  scanner.rs
scripts/: clean-non-source.ps1
src/Nulmesis.App/: App.xaml.cs  CliApplication.cs  MainWindow.xaml  MainWindow.xaml.cs  Nulmesis.App.csproj  Program.cs
src/Nulmesis.App/Services/: IDialogService.cs  WpfDialogService.cs
src/Nulmesis.App/ViewModels/: MainWindowViewModel.cs
src/Nulmesis.App/Views/: DeleteConfirmationDialog.xaml  DeleteConfirmationDialog.xaml.cs
src/Nulmesis.Core/Domain/Events/: NulMatchDeletedEventArgs.cs
src/Nulmesis.Core/Domain/Models/: DeleteConfirmationDto.cs  DeleteError.cs  DeleteResult.cs  DeleteSummary.cs  (+6 more)
src/Nulmesis.Core/Services/: NulFileDeleter.cs  NulFileScanner.cs
tests/: Directory.Build.props  Directory.Build.targets
tests/Nulmesis.App.Tests/: CliApplicationTests.cs  DeleteFlowTests.cs  ErrorSummaryTests.cs  MainWindowViewModelTests.cs  Nulmesis.App.Tests.csproj  ProgramPublishSmokeTests.cs
tests/Nulmesis.App.Tests/Mocks/: MockDialogService.cs
tests/Nulmesis.Core.Tests/: NulFileScannerTests.cs  NulMatchPolicyTests.cs  Nulmesis.Core.Tests.csproj
tests/Nulmesis.IntegrationTests/: NulFileDeleterTests.cs  NulFileScannerIntegrationTests.cs  PublishSmokePerformanceTests.cs  ReservedNameFixtureBuilderTests.cs
tests/Shared/: ReservedNameFixtureBuilder.cs  TempTestRootFactory.cs
(+2 files in other folders)
