[workspace]
members = [
  "crates/nulmesis-core",
  "crates/nulmesis-cli",
]
exclude = [
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Nulmesis contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tempfile = "3.23"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
