[package]
name = "nulmesis-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
nulmesis-core = { path = "../nulmesis-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
