[package]
name = "nulmesis-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Nulmesis contributors"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nulmesis-cli = { path = "../../../crates/nulmesis-cli" }
nulmesis-core = { path = "../../../crates/nulmesis-core" }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
