[package]
name = "nulmesis-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Nulmesis contributors"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
nulmesis-core = { path = "../../../crates/nulmesis-core" }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
